refactor(ui): bottom-navigation - apply mappings

--- a/src/framework/ui/common/mapping.json
+++ b/src/framework/ui/common/mapping.json
@@ -88,20 +88,35 @@
       "meta": {
         "scope": "mobile",
         "parameters": {
+          "paddingHorizontal": {
+            "type": "number"
+          },
+          "paddingVertical": {
+            "type": "number"
+          },
+          "iconMarginVertical": {
+            "type": "number"
+          },
           "iconWidth": {
             "type": "number"
           },
           "iconHeight": {
             "type": "number"
           },
-          "iconMarginBottom": {
-            "type": "number"
-          },
           "iconTintColor": {
             "type": "string"
           },
+          "textMarginVertical": {
+            "type": "number"
+          },
           "textColor": {
             "type": "string"
+          },
+          "textFontSize": {
+            "type": "number"
+          },
+          "textLineHeight": {
+            "type": "number"
           },
           "textFontWeight": {
             "type": "string"
@@ -124,16 +139,19 @@
       "appearances": {
         "default": {
           "mapping": {
-            "iconWidth": 40,
-            "iconHeight": 40,
-            "iconMarginBottom": 5,
-            "iconTintColor": "gray-dark",
-            "textColor": "gray-dark",
+            "iconWidth": 32,
+            "iconHeight": 32,
+            "iconMarginVertical": 4,
+            "iconTintColor": "color-basic-500",
+            "textMarginVertical": 4,
+            "textFontSize": 13,
+            "textLineHeight": 16,
             "textFontWeight": "600",
+            "textColor": "color-basic-600",
             "state": {
               "selected": {
-                "iconTintColor": "blue-primary",
-                "textColor": "blue-primary"
+                "iconTintColor": "color-primary-500",
+                "textColor": "color-primary-500"
               }
             }
           }
@@ -144,11 +162,11 @@
       "meta": {
         "scope": "mobile",
         "parameters": {
-          "backgroundColor": {
-            "type": "string"
-          },
           "paddingVertical": {
             "type": "number"
+          },
+          "backgroundColor": {
+            "type": "string"
           },
           "borderTopColor": {
             "type": "string"
@@ -177,18 +195,18 @@
       "appearances": {
         "default": {
           "mapping": {
-            "backgroundColor": "transparent",
-            "paddingVertical": 16,
-            "borderTopColor": "gray-primary",
+            "paddingVertical": 4,
+            "backgroundColor": "color-white",
+            "borderTopColor": "color-basic-400",
             "borderTopWidth": 1,
-            "indicatorHeight": 3,
-            "indicatorBackgroundColor": "blue-primary"
+            "indicatorHeight": 4,
+            "indicatorBackgroundColor": "color-primary-500"
           }
         },
         "noIndicator": {
           "mapping": {
             "indicatorHeight": 0,
-            "indicatorBackgroundColor": "transparent"
+            "indicatorBackgroundColor": "opacity-transparent"
           }
         }
       }
