--- a/src/framework/ui/common/mapping.json
+++ b/src/framework/ui/common/mapping.json
@@ -249,17 +249,20 @@
           "backgroundColor": {
             "type": "string"
           },
-          "textColor": {
-            "type": "string"
+          "textMarginHorizontal": {
+            "type": "number"
           },
           "textFontSize": {
+            "type": "number"
+          },
+          "textLineHeight": {
             "type": "number"
           },
           "textFontWeight": {
             "type": "string"
           },
-          "textMarginHorizontal": {
-            "type": "number"
+          "textColor": {
+            "type": "string"
           },
           "iconWidth": {
             "type": "number"
@@ -428,6 +431,7 @@
                 "paddingHorizontal": 6,
                 "paddingVertical": 6,
                 "textFontSize": 10,
+                "textLineHeight": 12,
                 "textMarginHorizontal": 6,
                 "iconWidth": 12,
                 "iconHeight": 12,
@@ -439,6 +443,7 @@
                 "paddingHorizontal": 8,
                 "paddingVertical": 8,
                 "textFontSize": 12,
+                "textLineHeight": 16,
                 "textMarginHorizontal": 8,
                 "iconWidth": 16,
                 "iconHeight": 16,
@@ -450,6 +455,7 @@
                 "paddingHorizontal": 10,
                 "paddingVertical": 12,
                 "textFontSize": 14,
+                "textLineHeight": 16,
                 "textMarginHorizontal": 10,
                 "iconWidth": 16,
                 "iconHeight": 16,
@@ -461,6 +467,7 @@
                 "paddingHorizontal": 10,
                 "paddingVertical": 14,
                 "textFontSize": 16,
+                "textLineHeight": 20,
                 "textMarginHorizontal": 10,
                 "iconWidth": 20,
                 "iconHeight": 20,
@@ -472,6 +479,7 @@
                 "paddingHorizontal": 12,
                 "paddingVertical": 16,
                 "textFontSize": 18,
+                "textLineHeight": 24,
                 "textMarginHorizontal": 12,
                 "iconWidth": 24,
                 "iconHeight": 24,
