package(common): update typing packages versions (#391)

--- a/src/playground/package.json
+++ b/src/playground/package.json
@@ -6,12 +6,12 @@
     "start": "expo start"
   },
   "dependencies": {
-    "expo": "^32.0.0",
+    "@eva/eva": "github:akveo/eva#package/mapping-eva",
+    "@eva/theme-eva": "github:akveo/eva#package/theme-eva",
+    "expo": "^32.0.6",
     "react": "16.5.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-32.0.0.tar.gz",
-    "react-navigation": "^3.0.9",
-    "@eva/eva": "github:akveo/eva#package/mapping-eva",
-    "@eva/theme-eva": "github:akveo/eva#package/theme-eva"
+    "react-navigation": "^3.0.9"
   },
   "devDependencies": {
     "react-native-typescript-transformer": "^1.2.10"
