--- a/package.json
+++ b/package.json
@@ -39,14 +39,16 @@
   "devDependencies": {
     "@babel/core": "^7.1.2",
     "@babel/runtime": "^7.1.2",
-    "@types/jest": "^23.3.8",
+    "@types/expo": "^32.0.13",
+    "@types/jest": "^24.0.13",
     "@types/lodash.merge": "^4.6.6",
-    "@types/react": "^16.4.18",
-    "@types/react-native": "^0.57.7",
-    "@types/react-navigation": "^2.13.7",
-    "@types/react-test-renderer": "^16.0.3",
+    "@types/react": "^16.8.17",
+    "@types/react-native": "^0.57.57",
+    "@types/react-navigation": "^3.0.7",
+    "@types/react-test-renderer": "^16.8.1",
     "babel-core": "^7.0.0-bridge.0",
     "babel-jest": "^23.6.0",
+    "babel-plugin-module-resolver": "^3.2.0",
     "coveralls": "^3.0.2",
     "del": "^4.1.1",
     "gulp": "^3.9.1",
@@ -55,9 +57,9 @@
     "husky": "^1.1.2",
     "jest": "^24.0.0-alpha.9",
     "metro-react-native-babel-preset": "^0.49.0",
-    "react": "^16.6.0",
+    "react": "^16.5.0",
     "react-addons-test-utils": "^15.6.2",
-    "react-native": "^0.57.4",
+    "react-native": "^0.57.1",
     "react-native-mock": "^0.3.1",
     "react-native-testing-library": "^1.5.0",
     "react-native-typescript-transformer": "^1.2.10",
@@ -67,6 +69,6 @@
     "ts-node": "^3.2.2",
     "tslint": "^5.12.1",
     "typedoc": "^0.14.2",
-    "typescript": "^3.1.6"
+    "typescript": "^3.4.5"
   }
 }
