build(common): setup playground to watch eva changes

--- a/src/playground/tsconfig.json
+++ b/src/playground/tsconfig.json
@@ -15,7 +15,8 @@
       "es2016"
     ],
     "paths": {
-      "@eva/*": ["../../node_modules/eva/packages/*"],
+      "@eva/eva": ["../../../eva/packages/mapping/eva"],
+      "@eva/theme-eva": ["../../../eva/packages/theme/eva"],
       "@kitten/*": ["../framework/*"]
     }
   }
