build(common): setup env configurations (#394)

--- a/package.json
+++ b/package.json
@@ -9,25 +9,26 @@
     "url": "https://github.com/akveo/react-native-ui-kitten/issues"
   },
   "scripts": {
-    "start": "npm run build:pg && npm start --prefix ./src/playground",
+    "start": "npm run start:pg:dev",
+    "start:pg": "npm start --prefix ./src/playground",
+    "start:pg:prod": "npm run env:set -- prod && npm run start:pg",
+    "start:pg:dev": "npm run env:set -- dev && npm run start:pg",
+    "env:set": "sh ./scripts/environment/set-env.sh",
+    "build": "npm run build:src",
     "build:src": "tsc -p ./src/framework/tsconfig.json",
-    "build:pg": "( cd ./src/playground && npm install ) && tsc -p ./src/playground/tsconfig.json",
-    "build": "npm run build:src && npm run build:pg",
-    "clean:src": "rimraf ./dist/src/framework",
-    "clean:pg": "rimraf ./dist/src/playground",
+    "build:pg": "tsc -p ./src/playground/tsconfig.json",
     "clean": "rimraf ./dist",
     "docs:parse": "gulp docs",
     "docs:serve": "cd docs && npm start",
     "docs:start": "npm run docs:parse && npm run docs:serve",
-    "lint:src": "tslint -p ./src/framework/tsconfig.json",
-    "lint:src-fix": "npm run lint:src -- --fix",
-    "lint:pg": "tslint -p ./src/playground/tsconfig.json",
-    "lint:pg-fix": "npm run lint:pg -- --fix",
     "lint": "npm run lint:src && npm run lint:pg",
-    "lint:fix": "npm run lint:src-fix && npm run lint:pg-fix",
+    "lint:src": "tslint -p ./src/framework/tsconfig.json --fix",
+    "lint:pg": "tslint -p ./src/playground/tsconfig.json --fix",
     "ci:lint": "npm run lint",
-    "ci:build": "npm run build:pg",
-    "ci:test": "npm test -- --coverage && cat ./dist/jest/coverage/lcov.info | coveralls",
+    "ci:build": "npm run build:src && npm run build:pg",
+    "ci:test": "npm t -- --coverage && cat ./dist/jest/coverage/lcov.info | coveralls",
+    "install:pg": "( cd ./src/playground && npm i )",
+    "install": "npm run install:pg",
     "test": "jest"
   },
   "dependencies": {
