fix(ui): adopt to eva (#397)

--- a/.travis.yml
+++ b/.travis.yml
@@ -21,6 +21,6 @@ before_install:
 - eval "$(ssh-agent -s)"
 - DISPLAY=":0.0" SSH_ASKPASS="/tmp/askpass" setsid ssh-add /tmp/travis_deploy_key </dev/null
 install:
-- npm install
+- npm run ci:install
 script:
 - scripts/ci/travis-ci-script.sh
