build(common): update eva dependencies

--- a/src/playground/package.json
+++ b/src/playground/package.json
@@ -6,7 +6,7 @@
     "start": "expo start -c"
   },
   "dependencies": {
-    "@eva-design/eva": "github:akveo/eva#package/eva",
+    "@eva-design/eva": "1.0.0-beta.2",
     "expo": "^32.0.6",
     "react": "16.5.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-32.0.0.tar.gz",
