--- a/package.json
+++ b/package.json
@@ -32,8 +32,8 @@
     "test": "jest"
   },
   "dependencies": {
-    "@eva-design/dss": "github:akveo/eva#package/dss",
-    "@eva-design/processor": "github:akveo/eva#package/processor",
+    "@eva-design/dss": "1.0.0-beta.2",
+    "@eva-design/processor": "1.0.0-beta.2",
     "hoist-non-react-statics": "^3.2.1",
     "lodash.merge": "^4.6.1"
   },
