feat(docs): update dependencies and theme

--- a/docs/package.json
+++ b/docs/package.json
@@ -11,17 +11,17 @@
     "docs:gh-pages": "npm run docs:prod && npm run ngh -- --dir ./docs/dist"
   },
   "dependencies": {
-    "@angular/animations": "8.0.0-rc.2",
-    "@angular/common": "8.0.0-rc.2",
-    "@angular/compiler": "8.0.0-rc.2",
-    "@angular/core": "8.0.0-rc.2",
-    "@angular/forms": "8.0.0-rc.2",
-    "@angular/platform-browser": "8.0.0-rc.2",
-    "@angular/platform-browser-dynamic": "8.0.0-rc.2",
-    "@angular/router": "8.0.0-rc.2",
-    "@nebular/bootstrap": "4.0.0-rc.2",
-    "@nebular/eva-icons": "^4.0.0-rc.2",
-    "@nebular/theme": "4.0.0-rc.2",
+    "@angular/animations": "8.0.0",
+    "@angular/common": "8.0.0",
+    "@angular/compiler": "8.0.0",
+    "@angular/core": "8.0.0",
+    "@angular/forms": "8.0.0",
+    "@angular/platform-browser": "8.0.0",
+    "@angular/platform-browser-dynamic": "8.0.0",
+    "@angular/router": "8.0.0",
+    "@nebular/bootstrap": "4.0.0",
+    "@nebular/eva-icons": "4.0.0",
+    "@nebular/theme": "4.0.0",
     "bootstrap": "4.0.0",
     "colors.js": "1.2.4",
     "core-js": "2.5.7",
@@ -30,19 +30,19 @@
     "intersection-observer": "0.5.0",
     "marked": "^0.3.9",
     "normalize.css": "8.0.0",
-    "rxjs": "6.5.1",
+    "rxjs": "6.5.2",
     "tslib": "^1.9.0",
-    "zone.js": "~0.9.0"
+    "zone.js": "~0.9.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.800.0-rc.2",
-    "@angular-devkit/core": "8.0.0-rc.2",
-    "@angular-devkit/schematics": "8.0.0-rc.2",
-    "@angular/cdk": "8.0.0-rc.0",
-    "@angular/cli": "8.0.0-rc.2",
-    "@angular/compiler-cli": "8.0.0-rc.2",
-    "@angular/language-service": "8.0.0-rc.2",
-    "@schematics/angular": "^8.0.0-rc.2",
+    "@angular-devkit/build-angular": "~0.800.0",
+    "@angular-devkit/core": "8.0.0",
+    "@angular-devkit/schematics": "8.0.0",
+    "@angular/cdk": "8.0.0",
+    "@angular/cli": "8.0.0",
+    "@angular/compiler-cli": "8.0.0",
+    "@angular/language-service": "8.0.0",
+    "@schematics/angular": "^8.0.0",
     "angular-cli-ghpages": "0.5.0",
     "docsearch.js": "^2.5.2",
     "codelyzer": "^5.0.1",
